@@ -1,0 +1,11 @@
+{
+  "timestamp" : "2022-04-07T16:25:06Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 1 ],
+  "count_prev_day_inc" : 1,
+  "count_prev_day_dec" : 0,
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 1 ],
+  "uniques_prev_day_inc" : 1,
+  "uniques_prev_day_dec" : 0
+}
