@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-07T08:21:47Z",
+  "timestamp" : "2022-04-07T16:25:06Z",
   "count_outdated" : 1158,
   "uniques_outdated" : 302,
-  "count" : 1743,
-  "uniques" : 322,
+  "count" : 1744,
+  "uniques" : 323,
   "clones" : [
     {
       "timestamp": "2022-03-27T00:00:00Z",
@@ -49,6 +49,13 @@
     },
     {
       "timestamp": "2022-04-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-04-07T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
