@@ -1,5 +1,5 @@
 {
-  "count": 585,
+  "count": 586,
   "uniques": 15,
   "clones": [
     {
@@ -34,6 +34,11 @@
     },
     {
       "timestamp": "2022-04-06T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-07T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
