@@ -1,3 +1,9 @@
+2022-04-07T16:25:06Z:
+* notice: last 14d: all unq: 586 15
+* notice: prev accum: outdated-all outdated-unq / all unq: 1158 302 / 1743 322
+* notice: next accum: outdated-all outdated-unq / all unq: 1158 302 / 1744 323
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +1 +1 / -0 -0
+
 2022-04-07T08:21:47Z:
 * notice: last 14d: all unq: 585 15
 * notice: prev accum: outdated-all outdated-unq / all unq: 1156 301 / 1743 322
